--- a/Dockerfile.dev
+++ b/Dockerfile.dev
@@ -1,29 +1,29 @@
 # Dockerfile for Development
 FROM node:20-slim
 
-# Set working directory
+ARG USER_ID=1000
+ARG GROUP_ID=1000
+
 WORKDIR /app
 
-# Install dependencies for Debian
 RUN apt-get update && apt-get install -y libc6 openssl && rm -rf /var/lib/apt/lists/*
 
-# Copy package files first for layer caching
-COPY package.json package-lock.json* ./
+RUN groupadd -g ${GROUP_ID} nodeuser && \
+    useradd -u ${USER_ID} -g ${GROUP_ID} -m nodeuser
 
-# Install dependencies
+COPY --chown=nodeuser:nodeuser package.json package-lock.json* ./
+
 RUN npm ci
 
-# Copy and generate Prisma client
-COPY prisma/schema.prisma ./
+COPY --chown=nodeuser:nodeuser prisma/schema.prisma ./
 RUN npx prisma generate
 
-# Copy the rest of the application
-COPY . .
+COPY --chown=nodeuser:nodeuser . .
 
-# Set environment variables
 ENV NODE_ENV=development
 ENV NEXT_TELEMETRY_DISABLED=1
 EXPOSE 3000
 
-# Default command for development
+USER nodeuser
+
 CMD ["npm", "run", "dev"]
