--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,6 +24,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        USER_ID: ${USER_ID:-1000}
+        GROUP_ID: ${GROUP_ID:-1000}
     container_name: nedcloud-dev-app
     ports:
       - "3000:3000"
@@ -42,6 +45,9 @@ services:
     build:
       context: .
       dockerfile: Dockerfile.dev
+      args:
+        USER_ID: ${USER_ID:-1000}
+        GROUP_ID: ${GROUP_ID:-1000}
     container_name: nedcloud-dev-studio
     ports:
       - "5555:5555"
